unpackaged/main/default/objects/DRCTS__Directories__c/DRCTS__Directories__c.object-meta.xml
<CustomObject>
    <description>This is the primary object for enhanced directories.</description>
    <label>Directories</label>
    <nameField>
        <label>Enhanced Directory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Directories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>