unpackaged/main/default/objects/DRCTS__Directories__c/fields/Directory_URL__c.field-meta.xml
<CustomField>
    <fullName>Directory_URL__c</fullName>
    <formula>$Setup.GDO_Settings__c.Member_Portal_Base_URL__c &amp; &#39;/LightningMemberPortal/s/searchdirectory?id=&#39; + Id</formula>
    <label>Directory URL</label>
    <type>Text</type>
</CustomField>