unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Additional_Fields__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Additional_Fields__c</fullName>
    <description>Any additional fields to be displayed</description>
    <inlineHelpText>Any additional fields to be displayed</inlineHelpText>
    <label>Additional Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>