unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Badges_Filter__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Badges_Filter__c</fullName>
    <description>Defines the badges that are allowed to view the directory.</description>
    <inlineHelpText>Defines the badges that are allowed to view the directory.</inlineHelpText>
    <label>Badges Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>