unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Banner_Image__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Banner_Image__c</fullName>
    <description>Defines the image path for the banner image to be displayed in the directory.</description>
    <inlineHelpText>Defines the image path for the banner image to be displayed in the directory.</inlineHelpText>
    <label>Banner Image</label>
    <type>Url</type>
</CustomField>