unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Body_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Body_Background_Color__c</fullName>
    <description>The color for the overall background.</description>
    <inlineHelpText>The color for the overall background.</inlineHelpText>
    <label>Body Background Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>