unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Column_Headers__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Column_Headers__c</fullName>
    <description>This field contains field names (CSV) to be displayed as column headers for the table view.</description>
    <inlineHelpText>This field contains field names (CSV) to be displayed as column headers for the table view.</inlineHelpText>
    <label>Column Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>