unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Component_Header__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Component_Header__c</fullName>
    <description>Name is displayed as header of the related list.</description>
    <inlineHelpText>Name is displayed as header of the related list.</inlineHelpText>
    <label>Component Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>