unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Component_Name__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Component_Name__c</fullName>
    <description>** REQUIRED ** API name of a Lightning component.</description>
    <inlineHelpText>** REQUIRED ** API name of a Lightning component.</inlineHelpText>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>