unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Contact_Me_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Contact_Me_Button_Label__c</fullName>
    <defaultValue>&quot;Send Email&quot;</defaultValue>
    <description>This field defines the button label for the contact me functionality.</description>
    <inlineHelpText>This field defines the button label for the contact me functionality.</inlineHelpText>
    <label>Contact Me Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>