unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Contact_Me_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Contact_Me_Email_Template__c</fullName>
    <description>This field contains the email template to be used for all email&#39;s sent using the contact me functionality</description>
    <inlineHelpText>This field contains the email template to be used for all email&#39;s sent using the contact me functionality</inlineHelpText>
    <label>Contact Me Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>