unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Contact_Me_From_Org_Wide_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Contact_Me_From_Org_Wide_Email_Address__c</fullName>
    <description>This field contains the org-wide email address to be used as the sender&#39;s email address for all emails.</description>
    <inlineHelpText>This field contains the org-wide email address to be used as the sender&#39;s email address for all emails.</inlineHelpText>
    <label>Contact Me From: Org-Wide Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>