unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Contact_Me_To_Field__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Contact_Me_To_Field__c</fullName>
    <description>This field contains the recipient&#39;s email address field.</description>
    <inlineHelpText>This field contains the recipient&#39;s email address field.</inlineHelpText>
    <label>Contact Me To: Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>