unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Custom_CSS__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Custom_CSS__c</fullName>
    <description>Custom CSS is inserted before the closing html head (&amp;quot;&amp;lt;/head&amp;gt;&amp;quot;) tag into pages using this Theme.</description>
    <inlineHelpText>Custom CSS is inserted before the closing html head (&amp;quot;&amp;lt;/head&amp;gt;&amp;quot;) tag into pages using this Theme.</inlineHelpText>
    <label>Custom CSS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>