unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Custom_HTML_Config__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Custom_HTML_Config__c</fullName>
    <description>** SYSTEM ** (LABEL = SYSTEM, API NAME = DRCTS__Custom_HTML_Config__c)</description>
    <inlineHelpText>** SYSTEM ** (LABEL = SYSTEM, API NAME = DRCTS__Custom_HTML_Config__c)</inlineHelpText>
    <label>System</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>