unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Default_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Default_Sort_Field__c</fullName>
    <description>Used to sort records based on this field whenever someone lands on this directory</description>
    <inlineHelpText>Used to sort records based on this field whenever someone lands on this directory</inlineHelpText>
    <label>Default Sort Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>