unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Default_Sort_Field_Order__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Default_Sort_Field_Order__c</fullName>
    <defaultValue>&#39;ASC&#39;</defaultValue>
    <description>Used to identify whether is ASC or DESC order for the default sort field. DEFAULTS ASC</description>
    <inlineHelpText>Used to identify whether is ASC or DESC order for the default sort field. DEFAULTS ASC</inlineHelpText>
    <label>Default Sort Field Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>