unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Default_View__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Default_View__c</fullName>
    <description>Defines the default view of the directory search results.</description>
    <inlineHelpText>Defines the default view of the directory search results.</inlineHelpText>
    <label>Default View</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Enhanced List</fullName>
            </value>
            <value>
                <fullName>Geo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>