unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Description__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Description__c</fullName>
    <description>Describes the directory.  This is an internal field and does not display in front end.</description>
    <inlineHelpText>Describes the directory.  This is an internal field and does not display in front end.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>