unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Detail_Action_Button_Field__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Detail_Action_Button_Field__c</fullName>
    <description>This field contains the api name of the field used for the action button on Detail view</description>
    <inlineHelpText>This field contains the api name of the field used for the action button on Detail view</inlineHelpText>
    <label>Action Button Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>