unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Detail_Action_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Detail_Action_Button_Label__c</fullName>
    <description>This field defines what is displayed for the button label on Detail view.</description>
    <inlineHelpText>This field defines what is displayed for the button label on Detail view.</inlineHelpText>
    <label>Action Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>