unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Detail_Enable_Action_Button__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Detail_Enable_Action_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By selecting this field you will enable an action button on the record&#39;s row in Detail View.</description>
    <inlineHelpText>By selecting this field you will enable an action button on the record&#39;s row in Detail List View.</inlineHelpText>
    <label>Enable Action Button</label>
    <type>Checkbox</type>
</CustomField>