unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Detail_Enable_Image__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Detail_Enable_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the each result will display an image in the detail view.</description>
    <label>Enable Image</label>
    <type>Checkbox</type>
</CustomField>