unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Detail_Latitude__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Detail_Latitude__c</fullName>
    <description>Corresponding Latitude field from the primary object</description>
    <inlineHelpText>Corresponding Latitude field from the primary object</inlineHelpText>
    <label>Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>