unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Detail_Subtitle_Field__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Detail_Subtitle_Field__c</fullName>
    <description>The field value appears on the detail view underneath name.</description>
    <inlineHelpText>The field value appears on the detail view underneath name.</inlineHelpText>
    <label>Detail Subtitle Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>