unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Directory_Style__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Directory_Style__c</fullName>
    <description>Generated Styles for Directories.</description>
    <inlineHelpText>Generated Styles for Directories.</inlineHelpText>
    <label>System</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>