unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Disable_Detail_View__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Disable_Detail_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this will enable the on-click capability on all the views and will be redirected to detail page ** Defaults checked **</description>
    <inlineHelpText>Checking this will enable the on-click capability on all the views and will be redirected to detail page ** Defaults checked **</inlineHelpText>
    <label>Enable Detail View</label>
    <type>Checkbox</type>
</CustomField>