unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Disable_Filter__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Disable_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the filter functionality</description>
    <inlineHelpText>Enables the filter functionality</inlineHelpText>
    <label>Enable Filter</label>
    <type>Checkbox</type>
</CustomField>