unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Disable_Search__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Disable_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the search functionality</description>
    <inlineHelpText>Enables the search functionality</inlineHelpText>
    <label>Enable Search</label>
    <type>Checkbox</type>
</CustomField>