unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Disable_Sort__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Disable_Sort__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the sort functionality</description>
    <inlineHelpText>Enables the sort functionality</inlineHelpText>
    <label>Enable Sort</label>
    <type>Checkbox</type>
</CustomField>