unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Display_Name__c</fullName>
    <description>This field will display at the title of the directory across the banner.</description>
    <inlineHelpText>This field will display at the title of the directory across the banner.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>