unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enable_Access_Permissions__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enable_Access_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the directory will only be accessible by authenticated individuals that meet the criteria.</description>
    <inlineHelpText>When checked the directory will only be accessible by authenticated individuals that meet the criteria.</inlineHelpText>
    <label>Enable Access Permissions</label>
    <type>Checkbox</type>
</CustomField>