unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enable_Contact_Me__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enable_Contact_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field enables authenticated users to direct email the search result.</description>
    <inlineHelpText>Checking this field enables authenticated users to direct email the search result.</inlineHelpText>
    <label>Enable Contact Me</label>
    <type>Checkbox</type>
</CustomField>