unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enable_Contact_Preferences__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enable_Contact_Preferences__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Enabled, this will have the ability for the user to show/hide profile fields when they are Authenticated.</description>
    <inlineHelpText>When Enabled, this will have the ability for the user to show/hide profile fields when they are Authenticated.</inlineHelpText>
    <label>Enable Contact Preferences</label>
    <type>Checkbox</type>
</CustomField>