unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enable_Detail_Map__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enable_Detail_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, a map will display on the detail page with the location of the selected record.</description>
    <inlineHelpText>When checked, a map will display on the detail page with the location of the selected record.</inlineHelpText>
    <label>Enable Detail Map</label>
    <type>Checkbox</type>
</CustomField>