unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enable_Enhanced_List_Display__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enable_Enhanced_List_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the directory will have an option to view the results in the enhanced list format.</description>
    <inlineHelpText>When checked the directory will have an option to view the results in the enhanced list format.</inlineHelpText>
    <label>Enable Enhanced List Display</label>
    <type>Checkbox</type>
</CustomField>