unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enable_Geo_Location_Display__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enable_Geo_Location_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the directory will have an option to view the results with a map.</description>
    <inlineHelpText>When checked the directory will have an option to view the results with a map.</inlineHelpText>
    <label>Enable Geo-Location Display</label>
    <type>Checkbox</type>
</CustomField>