unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enable_List_Print__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enable_List_Print__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field will display the ability to print lists from the search view.</description>
    <inlineHelpText>Checking this field will display the ability to print lists from the search view.</inlineHelpText>
    <label>Enable List Print</label>
    <type>Checkbox</type>
</CustomField>