unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enable_Listing_Profile_Edit__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enable_Listing_Profile_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the user to edit their own listing.</description>
    <inlineHelpText>Enables the user to edit their own listing.</inlineHelpText>
    <label>Enable Listing Profile Edit</label>
    <type>Checkbox</type>
</CustomField>