unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enable_Table_Display__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enable_Table_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the directory will have an option to view the results in a tabular format.</description>
    <inlineHelpText>When checked the directory will have an option to view the results in a tabular format.</inlineHelpText>
    <label>Enable Table Display</label>
    <type>Checkbox</type>
</CustomField>