unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enable_Tile_Flip__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enable_Tile_Flip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, tile will now flip on hover in the frontend.</description>
    <inlineHelpText>When checked, tile will now flip on hover in the frontend.</inlineHelpText>
    <label>Enable Tile Flip</label>
    <type>Checkbox</type>
</CustomField>