unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enable_Tile_List_Display__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enable_Tile_List_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this will enable the tile list display.</description>
    <inlineHelpText>When checked, this will enable the tile list display.</inlineHelpText>
    <label>Enable Tile List Display</label>
    <type>Checkbox</type>
</CustomField>