unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enhanced_List_Action_Button_Field__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enhanced_List_Action_Button_Field__c</fullName>
    <description>This field contains the field&#39;s api name that contains the action URL on Enhanced List view.</description>
    <inlineHelpText>This field contains the field&#39;s api name that contains the action URL on Enhanced List view.</inlineHelpText>
    <label>Action Button Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>