unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enhanced_List_Action_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enhanced_List_Action_Button_Label__c</fullName>
    <description>This field contains the label value to be presented for the action button.</description>
    <inlineHelpText>This field contains the label value to be presented for the action button.</inlineHelpText>
    <label>Action Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>