unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enhanced_List_Left_Column_Field_2__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enhanced_List_Left_Column_Field_2__c</fullName>
    <description>This field contains the api name of the field used for the Field 2 position in the enhanced list view.</description>
    <inlineHelpText>This field contains the api name of the field used for the Field 2 position in the enhanced list view.</inlineHelpText>
    <label>Position 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>