unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enhanced_List_Left_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enhanced_List_Left_Column_Name__c</fullName>
    <description>This field contains the api name of the fields used for the name position in the enhanced list view.</description>
    <inlineHelpText>This field contains the api name of the fields used for the name position in the enhanced list view.</inlineHelpText>
    <label>Position 1</label>
    <type>TextArea</type>
</CustomField>