unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Enhanced_List_Placeholder_Image__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Enhanced_List_Placeholder_Image__c</fullName>
    <description>The URL of the image to be used when the result has no value in the image field.</description>
    <inlineHelpText>The URL of the image to be used when the result has no value in the image field.</inlineHelpText>
    <label>Placeholder Image</label>
    <type>Url</type>
</CustomField>