unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Filter_Condition__c</fullName>
    <description>Defines the filter condition used to filter the full list of possible results in directory.</description>
    <inlineHelpText>Defines the filter condition used to filter the full list of possible results in directory.</inlineHelpText>
    <label>Filter Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>