unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Filter_Criteria__c</fullName>
    <description>Defines the criteria used to filter the full list of possible results in the directory.</description>
    <inlineHelpText>Defines the criteria used to filter the full list of possible results in the directory.</inlineHelpText>
    <label>Filter Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>