unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Filter_Fields__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Filter_Fields__c</fullName>
    <description>This field holds the values for the fields that are used as filters in the directory.</description>
    <inlineHelpText>This field holds the values for the fields that are used as filters in the directory.</inlineHelpText>
    <label>Filter Fields</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>