unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Geo_Display_Results__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Geo_Display_Results__c</fullName>
    <description>The value entered in this field is the number of results returned for each page on the Geo view</description>
    <inlineHelpText>The value entered in this field is the number of results returned for each page on the Geo view</inlineHelpText>
    <label>Display Results</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>