unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Geo_Enable_Image__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Geo_Enable_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the each result will display an image in the geo-location view.</description>
    <inlineHelpText>When checked the each result will display an image in the geo-location view.</inlineHelpText>
    <label>Enable Image</label>
    <type>Checkbox</type>
</CustomField>