unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Geo_Image_field__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Geo_Image_field__c</fullName>
    <description>This field contains the api name of the image field to be displayed in the Geo view.</description>
    <inlineHelpText>This field contains the api name of the image field to be displayed in the Geo view.</inlineHelpText>
    <label>Image field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>